--- a/coverage-report/jp/co/dk/datastoremanager/database/DataBaseDriverConstants.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/DataBaseDriverConstants.html
@@ -138,15 +138,15 @@
       <td><pre class='prettyprint'>	String getUrl(String servername, String databasename) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>52</td><td class='count'>58</td>
+      <td class='line'>52</td><td class='count'>1</td>
       <td><pre class='prettyprint covered' id='l52s0'>		String result1 = this.url.replaceAll("servername", servername);</pre></td>
     </tr>
     <tr>
-      <td class='line'>53</td><td class='count'>58</td>
+      <td class='line'>53</td><td class='count'>1</td>
       <td><pre class='prettyprint covered' id='l53s0'>		String result2 = result1.replaceAll("databasename", databasename);</pre></td>
     </tr>
     <tr>
-      <td class='line'>54</td><td class='count'>58</td>
+      <td class='line'>54</td><td class='count'>1</td>
       <td><pre class='prettyprint covered' id='l54s0'>		return result2;</pre></td>
     </tr>
     <tr>
@@ -167,7 +167,7 @@
       <td><pre class='prettyprint'>	String getDriverClass() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>63</td><td class='count'>59</td>
+      <td class='line'>63</td><td class='count'>1</td>
       <td><pre class='prettyprint covered' id='l63s0'>		return this.driverClass;</pre></td>
     </tr>
     <tr>
@@ -187,8 +187,8 @@
       <td><pre class='prettyprint'>	DataStoreKind getDataStoreKind() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>71</td><td class='count'>3</td>
-      <td><pre class='prettyprint covered' id='l71s0'>		return this.dataStoreKind;</pre></td>
+      <td class='line'>71</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l71s0'>		return this.dataStoreKind;</pre></td>
     </tr>
     <tr>
       <td class='line'>72</td><td>&nbsp;</td>
