--- a/coverage-report/jp/co/dk/datastoremanager/exception/DataStoreManagerException.html
+++ b/coverage-report/jp/co/dk/datastoremanager/exception/DataStoreManagerException.html
@@ -65,12 +65,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg){</pre></td>
     </tr>
     <tr>
-      <td class='line'>30</td><td class='count'>38</td>
-      <td><pre class='prettyprint covered' id='l30s0'>		super(msg);</pre></td>
+      <td class='line'>30</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l30s0'>		super(msg);</pre></td>
     </tr>
     <tr>
-      <td class='line'>31</td><td class='count'>38</td>
-      <td><pre class='prettyprint covered' id='l31s0'>	}</pre></td>
+      <td class='line'>31</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l31s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -90,12 +90,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String str){</pre></td>
     </tr>
     <tr>
-      <td class='line'>43</td><td class='count'>12</td>
-      <td><pre class='prettyprint covered' id='l43s0'>		super(msg, str);</pre></td>
+      <td class='line'>43</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l43s0'>		super(msg, str);</pre></td>
     </tr>
     <tr>
-      <td class='line'>44</td><td class='count'>12</td>
-      <td><pre class='prettyprint covered' id='l44s0'>	}</pre></td>
+      <td class='line'>44</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l44s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -115,12 +115,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, List&lt;String> list){</pre></td>
     </tr>
     <tr>
-      <td class='line'>56</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l56s0'>		super(msg, list);</pre></td>
+      <td class='line'>56</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l56s0'>		super(msg, list);</pre></td>
     </tr>
     <tr>
-      <td class='line'>57</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l57s0'>	}</pre></td>
+      <td class='line'>57</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l57s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -140,12 +140,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String[] str){</pre></td>
     </tr>
     <tr>
-      <td class='line'>69</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l69s0'>		super(msg, str);</pre></td>
+      <td class='line'>69</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l69s0'>		super(msg, str);</pre></td>
     </tr>
     <tr>
-      <td class='line'>70</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l70s0'>	}</pre></td>
+      <td class='line'>70</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l70s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -165,12 +165,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>82</td><td class='count'>3</td>
-      <td><pre class='prettyprint covered' id='l82s0'>		super(msg, throwable);</pre></td>
+      <td class='line'>82</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l82s0'>		super(msg, throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>83</td><td class='count'>3</td>
-      <td><pre class='prettyprint covered' id='l83s0'>	}</pre></td>
+      <td class='line'>83</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l83s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -191,12 +191,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String str, Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>96</td><td class='count'>18</td>
-      <td><pre class='prettyprint covered' id='l96s0'>		super(msg, str, throwable);</pre></td>
+      <td class='line'>96</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l96s0'>		super(msg, str, throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>97</td><td class='count'>18</td>
-      <td><pre class='prettyprint covered' id='l97s0'>	}</pre></td>
+      <td class='line'>97</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l97s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -217,12 +217,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, List&lt;String> list,Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>110</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l110s0'>		super(msg, list,throwable);</pre></td>
+      <td class='line'>110</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l110s0'>		super(msg, list,throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>111</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l111s0'>	}</pre></td>
+      <td class='line'>111</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l111s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -243,12 +243,12 @@ import jp.co.dk.message.exception.AbstractMessageException;
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String[] str, Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>124</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l124s0'>		super(msg, str, throwable);</pre></td>
+      <td class='line'>124</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l124s0'>		super(msg, str, throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>125</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l125s0'>	}</pre></td>
+      <td class='line'>125</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l125s0'>	}</pre></td>
     </tr>
     <tr>
       <td class='line'>126</td><td>&nbsp;</td>
