--- a/coverage-report/jp/co/dk/datastoremanager/DataStoreKind.html
+++ b/coverage-report/jp/co/dk/datastoremanager/DataStoreKind.html
@@ -11,8 +11,8 @@
   <table cellpadding='0' cellspacing='1'>
     <caption>DataStoreManager/src/jp/co/dk/datastoremanager/DataStoreKind.java</caption>
     <tr>
-      <td class='line'>1</td><td class='count'>34</td>
-      <td><pre class='prettyprint covered' id='l1s0'>package jp.co.dk.datastoremanager;</pre></td>
+      <td class='line'>1</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l1s0'>package jp.co.dk.datastoremanager;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -132,32 +132,32 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       </td>
     </tr>
     <tr>
-      <td class='line'>49</td><td class='count'>73</td>
-      <td><pre class='prettyprint covered' id='l49s0'>		for (DataStoreKind kindObj : DataStoreKind.values()) {</pre></td>
+      <td class='line'>49</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l49s0'>		for (DataStoreKind kindObj : DataStoreKind.values()) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>50</td><td class='count'>68</td>
-      <td><pre class='prettyprint jmp'>			<span id='l50s0' title='Executions: 68' class='covered'>if (kindObj.kind.equals(kind)) return kindObj;</span></pre></td>
+      <td class='line'>50</td><td class='count'>0</td>
+      <td><pre class='prettyprint jmp'>			<span id='l50s0' title='Executions: 0' class='uncovered'>if (kindObj.kind.equals(kind)) return kindObj;</span></pre></td>
     </tr>
     <tr>
       <td class='line'>51</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>52</td><td class='count'>5</td>
-      <td><pre class='prettyprint jmp'>		<span id='l52s0' title='Executions: 5' class='covered'>if (kind == null)</span> <span id='l52s1' title='Executions: 1' class='covered'>{</span></pre></td>
+      <td class='line'>52</td><td class='count'>0</td>
+      <td><pre class='prettyprint jmp'>		<span id='l52s0' title='Executions: 0' class='uncovered'>if (kind == null)</span> <span id='l52s1' title='Executions: 0' class='uncovered'>{</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>53</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l53s0'>			throw new DataStoreManagerException(DATASTORE_KIND_VALUE_IS_FAILE, "null");</pre></td>
+      <td class='line'>53</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l53s0'>			throw new DataStoreManagerException(DATASTORE_KIND_VALUE_IS_FAILE, "null");</pre></td>
     </tr>
     <tr>
       <td class='line'>54</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		} else {</pre></td>
     </tr>
     <tr>
-      <td class='line'>55</td><td class='count'>4</td>
-      <td><pre class='prettyprint covered' id='l55s0'>			throw new DataStoreManagerException(DATASTORE_KIND_VALUE_IS_FAILE, kind);</pre></td>
+      <td class='line'>55</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l55s0'>			throw new DataStoreManagerException(DATASTORE_KIND_VALUE_IS_FAILE, kind);</pre></td>
     </tr>
     <tr>
       <td class='line'>56</td><td>&nbsp;</td>
