--- a/coverage-report/jp/co/dk/datastoremanager/Record.html
+++ b/coverage-report/jp/co/dk/datastoremanager/Record.html
@@ -17,7 +17,8 @@
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'></td><td>&nbsp;</td>
-      <td><pre class='imports prettyprint' onclick='showHideLines(this)'><div>import java.util.Date;
+      <td><pre class='imports prettyprint' onclick='showHideLines(this)'><div>import java.sql.Timestamp;
+import java.util.Date;
 
 import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
 </div><span>import ...</span></pre></td>
@@ -33,7 +34,7 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
  */</div><span>/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>13</td><td>&nbsp;</td>
+      <td class='line'>14</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>public interface Record {</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -48,29 +49,44 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>22</td><td>&nbsp;</td>
+      <td class='line'>23</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public String getString(int index) throws DataStoreManagerException ;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'></td><td>&nbsp;</td>
       <td class='comment' onclick='showHideLines(this)'><div>	/**
-	 * このレコードから指定のインデックスの文字列を取得します。
+	 * このレコードから指定のインデックスの数値をInt型で取得します。
 	 * 
 	 * @param index インデックス
-	 * @return 数値
+	 * @return 数値(Int)
 	 * @throws DataStoreManagerException 値の取得に失敗した場合
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>31</td><td>&nbsp;</td>
+      <td class='line'>32</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public int getInt(int index) throws DataStoreManagerException ;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'></td><td>&nbsp;</td>
       <td class='comment' onclick='showHideLines(this)'><div>	/**
-	 * このレコードから指定のインデックスの文字列を取得します。
+	 * このレコードから指定のインデックスの数値をLong型で取得します。
+	 * 
+	 * @param index インデックス
+	 * @return 数値(long)
+	 * @throws DataStoreManagerException 値の取得に失敗した場合
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>41</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public long getLong(int index) throws DataStoreManagerException ;</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このレコードから指定のインデックスの日付を取得します。
 	 * 
 	 * @param index インデックス
 	 * @return 日付
@@ -78,11 +94,56 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>40</td><td>&nbsp;</td>
+      <td class='line'>50</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public Date getDate(int index) throws DataStoreManagerException ;</pre></td>
     </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>41</td><td>&nbsp;</td>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このレコードから指定のインデックスのタイムスタンプを取得します。
+	 * 
+	 * @param index インデックス
+	 * @return 日付
+	 * @throws DataStoreManagerException 値の取得に失敗した場合
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>59</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public Timestamp getTimestamp(int index) throws DataStoreManagerException ;</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このレコードから指定のインデックスのバイト配列を取得します。
+	 * 
+	 * @param index インデックス
+	 * @return バイト配列
+	 * @throws DataStoreManagerException 値の取得に失敗した場合
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>68</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public byte[] getBytes(int index) throws DataStoreManagerException ;</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このレコードから指定のインデックスのオブジェクトを取得します。
+	 * 
+	 * @param index インデックス
+	 * @return オブジェクト
+	 * @throws DataStoreManagerException 値の取得に失敗した場合
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>77</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public Object getObject(int index) throws DataStoreManagerException ;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>78</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
