--- a/coverage-report/jp/co/dk/datastoremanager/message/DataStoreManagerMessage.html
+++ b/coverage-report/jp/co/dk/datastoremanager/message/DataStoreManagerMessage.html
@@ -334,19 +334,28 @@
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'>112</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected DataStoreManagerMessage(String messageId) {</pre></td>
+      <td><pre class='comment'>	/** オブジェクトをバイト配列へ変換を試みましたが、失敗しました。 */</pre></td>
     </tr>
     <tr>
-      <td class='line'>113</td><td class='count'>33</td>
-      <td><pre class='prettyprint covered' id='l113s0'>		super(messageId);</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>114</td><td class='count'>33</td>
-      <td><pre class='prettyprint covered' id='l114s0'>	}</pre></td>
+      <td class='line'>113</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l113s0'>	public static final DataStoreManagerMessage FAILE_TO_AN_ATTEMPT_WAS_MADE_TO_CONVERT_TO_BYTE_ARRAY = new DataStoreManagerMessage("E034");</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>116</td><td>&nbsp;</td>
+      <td class='line'>115</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	protected DataStoreManagerMessage(String messageId) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>116</td><td class='count'>34</td>
+      <td><pre class='prettyprint covered' id='l116s0'>		super(messageId);</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>117</td><td class='count'>34</td>
+      <td><pre class='prettyprint covered' id='l117s0'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'>119</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
